# budget-tracker-lite

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Docker-Compose-Build-And-Push.ps1  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TESTING.md  dev.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: backend-lint.yml  backend-tests.yml  ci.yml  docker-build.yml  frontend-tests.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  auto_migrate.py  budget_tracker.db  coverage.xml  docker-entrypoint.sh  main.py  migrate.py  pyproject.toml  run-migrations.ps1  run-migrations.sh  test.db
backend/alembic/: env.py
backend/alembic/versions/: 934a1ebfd1a6_add_notes_and_tags_to_transactions.py  a7b8c9d0e1f2_add_gift_tracking_tables.py
backend/app/database/: database.py
backend/app/models/: __init__.py  beneficiary.py  category.py  transaction.py  user.py
backend/app/routers/: __init__.py  aggregations.py  beneficiaries.py  categories.py  transactions.py  users.py
backend/app/schemas/: __init__.py  aggregation.py  beneficiary.py  category.py  transaction.py  user.py
backend/app/services/: __init__.py  aggregation_service.py
backend/src/: main.py
backend/src/app/: __init__.py  config.py  database.py  main.py
backend/src/app/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
backend/src/app/config/: settings.py
backend/src/app/database/: __init__.py  session.py
backend/src/app/models/: __init__.py  beneficiary.py  category.py  gift_entry.py  gift_occasion.py  gift_purchase.py  password_reset_token.py  token_blocklist.py  transaction.py  user.py
backend/src/app/routers/: aggregations.py  beneficiaries.py  categories.py  gift_occasions.py  images.py  transactions.py  users.py
backend/src/app/schemas/: __init__.py  gift.py
backend/src/app/services/: aggregation.py
backend/src/app/transactions/: router.py  schemas.py  service.py
backend/test_data/: _smoke_auth_test.py  insert_test_transactions.py  test_transactions.jsonl
backend/tests/: conftest.py  test_auth_transactions_simple.py  test_dev_bypass.py  test_integration.py  test_logout.py
backend/tests/test_api/: test_aggregations.py  test_beneficiaries.py  test_categories.py  test_images.py  test_transactions.py  test_users.py
backend/tests/test_models/: test_models.py
backend/tests/test_services/: test_aggregation_service.py
frontend/: Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  nginx.dev.conf  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css  styles.scss
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  (+3 more)
(+87 files in other folders)
